--- a/schema/tools/package.json
+++ b/schema/tools/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "faker",
+  "name": "data-faker",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "dependencies": {
     "commander": "^2.9.0",
-    "json-schema-faker": "^0.4.0"
+    "json-schema-faker": "^0.4.0",
+    "faker":"3.0.1"
   },
   "devDependencies": {},
   "scripts": {
