--- a/requirements.in
+++ b/requirements.in
@@ -1,28 +1,8 @@
-Sphinx==1.6.2
-sphinx-intl==0.9.9
-transifex-client==0.12.4
-sphinx-rtd-theme==0.2.4
+Sphinx
+sphinx-intl
+transifex-client
+sphinx_rtd_theme
 # recommonmark commit pinned from master branch
 -e git+https://github.com/rtfd/recommonmark.git@c410abb565a3c4ad4de0ce204ab2fa2db8031cf1#egg=recommonmark
 -e git+https://github.com/OpenDataServices/sphinxcontrib-jsonschema.git@e39a92f4238bf022db11e4e88ba92fdaff2b31c9#egg=sphinxcontrib-jsonschema
 -e git+https://github.com/OpenDataServices/sphinxcontrib-opendataservices.git@fab0ff0167d32ec243d42f272e0e50766299c078#egg=sphinxcontrib-opendataservices
-## The following requirements were added by pip freeze:
-alabaster==0.7.10
-Babel==2.4.0
-certifi==2017.4.17
-chardet==3.0.4
-click==6.7
-CommonMark==0.7.3
-docutils==0.13.1
-future==0.16.0
-idna==2.5
-imagesize==0.7.1
-Jinja2==2.9.6
-MarkupSafe==1.0
-Pygments==2.2.0
-pytz==2017.2
-requests==2.18.1
-six==1.10.0
-snowballstemmer==1.2.1
-sphinxcontrib-websupport==1.0.1
-urllib3==1.22
