--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,34 @@
-Sphinx==1.6.2
-sphinx-intl==0.9.9
-transifex-client==0.12.4
-sphinx-rtd-theme==0.2.4
-# recommonmark commit pinned from master branch
--e git+https://github.com/rtfd/recommonmark.git@c410abb565a3c4ad4de0ce204ab2fa2db8031cf1#egg=recommonmark
--e git+https://github.com/OpenDataServices/sphinxcontrib-jsonschema.git@8d0d2bb00742b25707866b0f7a2b6c0c35948c5e#egg=sphinxcontrib-jsonschema
--e git+https://github.com/OpenDataServices/sphinxcontrib-opendataservices.git@fab0ff0167d32ec243d42f272e0e50766299c078#egg=sphinxcontrib-opendataservices
+sphinx-intl==0.9.11
+transifex-client==0.13.3
+sphinx-rtd-theme==0.3.1
+-e git+https://github.com/rtfd/recommonmark.git@450909bdcf4c5eafde7c89696006530ba7cc78de#egg=recommonmark
+-e git+https://github.com/OpenDataServices/sphinxcontrib-jsonschema.git@8d0d2bb00742b25707866b0f7a2b6c0c35948c5e#egg=sphinxcontrib_jsonschema
+-e git+https://github.com/OpenDataServices/sphinxcontrib-opendataservices.git@fab0ff0167d32ec243d42f272e0e50766299c078#egg=sphinxcontrib_opendataservices
 -e git+https://github.com/openownership/data-standard-sphinx-theme.git@1c1f70b58ad5baf787489c655cc1fc9ab8585889#egg=standard_theme
 ## The following requirements were added by pip freeze:
 alabaster==0.7.10
-Babel==2.4.0
-certifi==2017.4.17
+Babel==2.6.0
+certifi==2018.4.16
 chardet==3.0.4
 click==6.7
-CommonMark==0.7.3
-docutils==0.13.1
+CommonMark==0.7.5
+docutils==0.14
 future==0.16.0
-idna==2.5
-imagesize==0.7.1
-Jinja2==2.9.6
+idna==2.6
+imagesize==1.0.0
+Jinja2==2.10
+jsonpointer==2.0
+jsonref==0.1
 MarkupSafe==1.0
+packaging==17.1
 Pygments==2.2.0
-pytz==2017.2
-requests==2.18.1
-six==1.10.0
+pyparsing==2.2.0
+python-slugify==1.2.5
+pytz==2018.4
+requests==2.18.4
+six==1.11.0
 snowballstemmer==1.2.1
+Sphinx==1.7.5
 sphinxcontrib-websupport==1.0.1
+Unidecode==1.0.22
 urllib3==1.22
