--- a/schema/components.json
+++ b/schema/components.json
@@ -161,7 +161,12 @@
           "type":"string",
           "format":"uri"
         }
-      }
+      },
+      "anyOf": [
+        {"required": ["scheme"]},
+        {"required": ["schemeName"]},
+        {"required": ["scheme", "schemeName"]}
+      ]
     },
     "ID":{
       "title":"ID",
@@ -386,7 +391,12 @@
           "maxLength": 6,
           "minLength": 2
         }
-      }
+      },
+      "anyOf": [
+        {"required": ["name"]},
+        {"required": ["code"]},
+        {"required": ["name", "code"]}
+      ]
     }
   }
 }
