remove provenance as a type of annotation

--- a/schema/components.json
+++ b/schema/components.json
@@ -308,7 +308,7 @@
           "Title": "Motivation",
           "Description": "The motivation for this annotation, chosen from a codelist. Commenting should be used with the description field to add contextual comments to a field or statement. Correcting should be used to indicate that original material has been corrected, using the method in the description field. Identifying should be used when original data has been augmented or processed for the purpose of identifying natural persons or legal entities, using the method in the description field. Linking should be used to provide contextual material that explains the statement or field; URLs to linked material can be provided in the source field. Provenance should be used to identify the source of information at a statement or field level. Transformation should be used to describe how data has in fields has been changed from its original form. The new form MAY be provided in the transformedContent field.",
           "type": "string",
-          "enum": ["commenting", "correcting", "identifying", "linking", "provenance", "transformation"]
+          "enum": ["commenting", "correcting", "identifying", "linking", "transformation"]
         },
         "description":{
           "type":"string",
@@ -324,7 +324,7 @@
       "anyOf": [
         {
           "properties": {
-            "motivation": { "enum": [ "provenance"] }
+            "motivation": { "enum": [ "linking"] }
           },
           "required": ["statementPointerTarget", "motivation"]
         },
