--- a/schema/components.json
+++ b/schema/components.json
@@ -94,7 +94,7 @@
           "type":"string"
         },
         "schemeName": {
-          "title": "Schema name",
+          "title": "Scheme name",
           "Description": "The name of this scheme, where the org-id code is unknown or only an unvalidated string is provided.",
           "type": "string"
         },
@@ -363,8 +363,8 @@
           "type":"string"
         },
         "code":{
-          "title":"Name",
-          "description":"The ISO 2-digit code for the country",
+          "title":"Country code",
+          "description":"The ISO 2-digit code for the country.",
           "type":"string",
           "maxLength": 2,
           "minLength": 2
@@ -382,7 +382,7 @@
           "type":"string"
         },
         "code":{
-          "title":"Name",
+          "title":"Country code",
           "description":"The ISO_3166-2 2-Digit country code, or ISO_3166-2 sub-division code of the jurisdiction",
           "type":"string",
           "maxLength": 6,
