Refactoring of schema reference pages. Work in progress. New directive to display descriptions

--- a/schema/components.json
+++ b/schema/components.json
@@ -127,10 +127,11 @@
       ]
     },
     "ID": {
-      "title": "ID",
+      "title": "Statement Identifier",
       "description": "A persistent globally unique identifier for this statement.",
       "type": "string",
-      "minLength": 32
+      "minLength": 32,
+      "maxLenth":64
     },
     "Address": {
       "title": "Address",
