--- a/schema/components.json
+++ b/schema/components.json
@@ -16,7 +16,7 @@
       "properties": {
         "type": {
           "title": "Source type",
-          "description": "What type of source is this? Multiple tags can be combined.",
+          "description": "What type of source is this? Multiple tags can be combined. Values should come from the [source type](#sourcetype) codelist.",
           "type": "array",
           "items": {
             "type": "string",
@@ -78,7 +78,9 @@
     "ReplacesStatement": {
       "title": "Replaces statement",
       "description": "If this statement replaces a previous statement, provide the globally unique identifier for the previous statement here. Consuming applications are advised to mark the identified statements as no longer active.",
-      "type": "string"
+      "type": "string",
+      "minLength":32,
+      "maxLength":64
     },
     "Identifier": {
       "title": "Identifier",
