--- a/schema/components.json
+++ b/schema/components.json
@@ -1,7 +1,7 @@
 {
   "id": "components.json",
   "$schema": "http://json-schema.org/draft-04/schema#",
-  "version": "0.1-rc",
+  "version": "0.1",
   "definitions": {
     "StatementDate": {
       "title": "Statement date",
