--- a/requirements.in
+++ b/requirements.in
@@ -2,7 +2,7 @@ sphinx==1.7.5
 sphinx-intl
 transifex-client
 sphinx_rtd_theme
-CommonMark==0.7.5
+CommonMark==0.7.5 # Higher versions rename the package which mean we need code changes before we can upgrade, see https://github.com/rtfd/CommonMark-py/blob/master/CHANGELOG.md#080-2018-09-03
 -e git+https://github.com/rtfd/recommonmark.git@450909bdcf4c5eafde7c89696006530ba7cc78de#egg=recommonmark
 -e git+https://github.com/OpenDataServices/sphinxcontrib-jsonschema.git@8d0d2bb00742b25707866b0f7a2b6c0c35948c5e#egg=sphinxcontrib-jsonschema
 -e git+https://github.com/OpenDataServices/sphinxcontrib-opendataservices.git@fab0ff0167d32ec243d42f272e0e50766299c078#egg=sphinxcontrib-opendataservices
