--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "docs/_static/docson"]
 	path = docs/_static/docson
 	url = https://github.com/OpenDataServices/docson
-	branch = master
+	branch = our_version_1
